src/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departmente__c</fullName>
        <label>Departmente</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Position</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The related position must be in the same department. You cannot relate a position to itself</errorMessage>
            <filterItems>
                <field>Position__c.Departmente__c</field>
                <operation>equals</operation>
                <valueField>$Source.Department__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Position__c.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Related Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>